# aedron-patchouli

./: .gitignore  Cargo.toml  Makefile  util.mk  utils.mk
.cargo/: config.toml
client/: Cargo.toml  Makefile
client/.cargo/: config.toml
client/assets/: index.html  login.html
client/src/: components.rs  lib.rs  main.rs  router.rs
client/src/components/: app.rs  dashboard.rs  libraries.rs  library.rs  media.rs
client/src/components/dashboard/: libraries.rs  profile.rs  users.rs
common/: Cargo.toml
common/src/: lib.rs  libraries.rs  library.rs  media.rs  permissions.rs  users.rs
server/: Cargo.toml  Makefile  build.rs  sqlx-data.json
server/plugins/lib/: Cargo.toml
server/plugins/lib/src/: ffi.rs  lib.rs  media.rs
server/plugins/media-music/: Cargo.toml
server/plugins/media-music/src/: lib.rs
server/proc/: Cargo.toml
server/proc/src/: lib.rs
server/sql/: init.sql  migration_v1.sql  migration_v2.sql
server/src/: Rocket.toml  config.rs  db.rs  guards.rs  http.rs  log.rs  main.rs  plugins.rs  routes.rs  tasks.rs  tls.rs
server/src/http/: api.rs  assets.rs
server/src/plugins/: media.rs
server/src/routes/: api.rs  assets.rs
server/src/routes/api/: libraries.rs  media.rs  permissions.rs  users.rs
