[workspace]
members = [
	"server",
	"client",
	"server/plugins/media-music",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Dragonink (https://github.com/Dragonink)"]
repository = "https://github.com/Dragonink/aedron-patchouli"
edition = "2021"
publish = false

[workspace.dependencies]
serde_json = "^1.0.107"
[workspace.dependencies.pluglib]
package = "aedron_patchouli-pluglib"
path = "server/plugins/lib"
[workspace.dependencies.log]
version = "^0.4.20"
features = ["max_level_trace", "release_max_level_info"]
[workspace.dependencies.rusqlite]
version = "^0.29.0"
features = [
	"modern_sqlite",
	"time",
]
[workspace.dependencies.serde]
version = "^1.0.188"
default-features = false
features = ["derive"]
[workspace.dependencies.time]
version = "^0.3.28"
default-features = false

[profile.wasm-dev]
inherits = "dev"
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

