[package]
name = "aedron_patchouli-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["rlib", "cdylib"]

[features]
hydrate = [
	"leptos/hydrate",
	"leptos/template_macro",
	"leptos_meta/hydrate",
	"leptos_router/hydrate",
	"dep:console_log",
	"dep:lol_alloc",
	"dep:wasm-bindgen",
	"dep:web-sys",
]
ssr = [
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
]

default = ["hydrate"]

[dependencies]
log = { workspace = true }
serde_json = { workspace = true }
[dependencies.console_log]
version = "^1.0.0"
optional = true
[dependencies.leptos]
version = "^0.5.2"
default-features = false
[dependencies.leptos_meta]
version = "^0.5.2"
default-features = false
[dependencies.leptos_router]
version = "^0.5.2"
default-features = false
[dependencies.lol_alloc]
version = "^0.4.0"
optional = true
[dependencies.reqwest]
version = "^0.11.22"
default-features = false
features = ["rustls-tls", "json"]
[dependencies.wasm-bindgen]
version = "^0.2.88"
optional = true
[dependencies.web-sys]
version = "^0.3.65"
features = ["Window", "Location"]
optional = true
