[package]
name = "aedron_patchouli-server"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[features]
config-toml = ["config/toml"]
config-json = ["config/json"]
config-yaml = ["config/yaml"]

default = [
	"config-toml",
	"config-json",
	"config-yaml",
]

[[bin]]
name = "aedron-patchouli"
path = "src/main.rs"

[dependencies]
colored = "^2.0.4"
libloading = "^0.8.0"
log = { workspace = true }
serde = { workspace = true }
[dependencies.pluglib]
workspace = true
features = ["server"]
[dependencies.axum]
version = "^0.6.20"
default-features = false
features = ["tokio", "http1", "http2", "tower-log", "matched-path", "macros"]
[dependencies.axum-extra]
version = "^0.7.7"
features = ["typed-routing", "async-read-body"]
[dependencies.config]
version = "^0.13.3"
default-features = false
[dependencies.sqlx]
workspace = true
features = ["runtime-tokio", "json", "macros"]
[dependencies.time]
version = "^0.3.26"
default-features = false
features = ["formatting"]
[dependencies.tokio]
version = "^1.32.0"
features = ["rt-multi-thread", "macros", "signal", "fs"]
[dependencies.tower]
version = "^0.4.13"
default-features = false
[dependencies.tower-http]
version = "^0.4.3"
default-features = false
features = ["trace", "normalize-path", "compression-br"]
[dependencies.tracing]
version = "^0.1.37"
default-features = false
[target.'cfg(unix)'.dependencies]
syslog = "^6.1.0"
[target.'cfg(unix)'.dependencies.fern]
version = "^0.6.2"
features = ["colored", "syslog-6"]
[target.'cfg(not(unix))'.dependencies.fern]
version = "^0.6.2"
features = ["colored"]
