[package]
name = "aedron_patchouli-server"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[features]
config-toml = ["config/toml"]
config-yaml = ["config/yaml"]

default = [
	"config-toml",
	"config-yaml",
]

[[bin]]
name = "aedron-patchouli"
path = "src/main.rs"

[dependencies]
colored = "^1.5"
libloading = "^0.8.0"
log = { workspace = true }
mime-db = "^1.7.0"
tokio-native-tls = "^0.3.1"
r2d2 = "^0.8.10"
r2d2_sqlite = "^0.22.0"
rayon = "^1.7.0"
scheduled-thread-pool = "^0.2.7"
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = "^2.4.0"
[dependencies.pluglib]
workspace = true
features = ["server"]
[dependencies.axum]
version = "^0.6.20"
default-features = false
features = [
	"tokio",
	"http1",
	"http2",
	"tower-log",
	"json",
	"matched-path",
	"macros",
]
[dependencies.axum-extra]
version = "^0.7.7"
features = ["async-read-body"]
[dependencies.config]
version = "^0.13.3"
default-features = false
[dependencies.hyper]
version = "^0.14.27"
features = ["server"]
[dependencies.rusqlite]
workspace = true
features = [
	"column_decltype",
	"extra_check",
	"trace",
	"serde_json",
]
[dependencies.time]
workspace = true
default-features = false
features = ["formatting"]
[dependencies.tokio]
version = "^1.32.0"
features = ["rt-multi-thread", "macros", "signal", "fs"]
[dependencies.tower]
version = "^0.4.13"
default-features = false
[dependencies.tower-http]
version = "^0.4.3"
default-features = false
features = ["trace", "normalize-path", "compression-br"]
[dependencies.tracing]
version = "^0.1.37"
default-features = false
[target.'cfg(unix)'.dependencies]
syslog = "^6.1.0"
[target.'cfg(unix)'.dependencies.fern]
version = "^0.6.2"
features = ["colored", "syslog-6"]
[target.'cfg(not(unix))'.dependencies.fern]
version = "^0.6.2"
features = ["colored"]
