[package]
name = "aedron_patchouli-server-proc"
version = "0.1.0"
edition = "2021"
publish = false
[lib]
proc-macro = true

[dependencies.proc-macro2]
version = "1"
default-features = false
[dependencies.quote]
version = "1"
default-features = false
[dependencies.syn]
version = "1"
features = ["proc-macro", "parsing", "printing"]
