[package]
name = "aedron_patchouli-pluglib"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[features]
# Plugin type features
media = ["dep:sqlx", "dep:time"]
# Internal features
server = ["media", "dep:serde"]

[dependencies.sqlx]
workspace = true
optional = true
[dependencies.serde]
workspace = true
optional = true
[dependencies.time]
version = "^0.3.27"
default-features = false
optional = true