[package]
name = "aedron_patchouli-pluglib"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[features]
# Plugin type features
media = ["dep:rusqlite", "dep:time"]
# Internal features
server = [
	"media",
	"dep:serde",
	"dep:serde_json",
	"rusqlite/serde_json",
	"time/serde",
]

[dependencies.rusqlite]
workspace = true
optional = true
[dependencies.serde]
workspace = true
optional = true
[dependencies.serde_json]
version = "^1.0.107"
optional = true
[dependencies.time]
workspace = true
optional = true
