[package]
name = "aedron_patchouli-pluglib"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
rust-version = "1.73"

[features]
# Plugin type features
media = ["dep:time"]
# Internal features
server = [
	"media",
	"dep:serde",
	"dep:serde_json",
	"rusqlite/serde_json",
	"time/serde",
]

[dependencies.rusqlite]
workspace = true
optional = true
[dependencies.serde]
workspace = true
optional = true
[dependencies.serde_json]
workspace = true
optional = true
[dependencies.time]
workspace = true
optional = true
