[package]
name = "aedron_patchouli-plugin-media-music"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = "^1.0.105"
[dependencies.pluglib]
workspace = true
features = ["media"]
